--- a/src/components/title-section.module.css
+++ b/src/components/title-section.module.css
@@ -36,19 +36,7 @@
 }
 
 .pitchWave {
-  background-image: url("../../static/img/pitch-wave.svg");
-  width: 100vw;
-  background-size: cover;
-  height: 0;
-  padding: 0;
-  padding-bottom: 21%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  box-sizing: content-box;
-  margin-bottom: -15%;
-  margin-top: -1px;
+  display: none;
 }
 
 @keyframes fadeInUp {
@@ -69,6 +57,7 @@
   }
 
   .h1 {
-    font-size: 32px;
+    font-size: 28px;
+    max-width: 100%;
   }
 }
